hello-docker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hello-docker
  namespace: istio-system
spec:
  selector:
    matchLabels:
      run: hello-docker
  template:
    metadata:
      labels:
        run: hello-docker
    spec:
      containers:
        - name: hello-docker
          image: prakhar1989/static-site
          ports:
            - containerPort: 80
