hello-docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-docker
  namespace: istio-system
spec:
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
  type: ClusterIP
  selector:
    run: hello-docker
