hello-docker/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx
    namespace: istio-system
spec:
    hosts:
      - "nginx.istio.kongtelalug.com"
    gateways:
      - public-gateway.istio-system.svc.cluster.local
    http:
      - route:
           - destination:
                 host: hello-docker
